syntax = "proto3";

package pb;

import "pb/seller.proto";
import "pb/common.proto";
service SchoolService{
    //增加学校
    rpc AddSchool (School) returns (SchoolResp);
    //更新学校信息
    rpc UpdateSchool (School) returns (SchoolResp);
    //更新学校运费
    rpc UpdateExpressFee (School) returns (NormalResp);
    //获取云店铺的学校列表
    rpc StoreSchools (School) returns (SchoolsResp);
    //根据学校的id获取学校信息
    rpc GetSchoolById (School) returns (SchoolResp);
    //删除学校
    rpc DelSchool (School) returns (NormalResp);

}

//学校基本model
message School{

    string id = 1;
    string name = 2;
    string tel = 3;
    int64 express_fee = 4;
    string store_id = 5;
    int64 status = 6;
    double lat = 7;
    double lng = 8;
    int64 create_at = 9;
    int64 update_at = 10;
    SellerInfo seller = 11;
    int64 del_at = 12;
    string del_staff_id = 13;

}
//通用学校返回model
message SchoolResp{
    string code = 1;
    string message = 2;
    School data = 3;
}

//通用学校列表返回model
message SchoolsResp{
    string code = 1;
    string message =2;
    repeated School data = 3;
}
